# delta-health-medallion-API

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: Dockerfile  app.py
dbt_project/: profiles.yml
dbt_project/dbt_project_datamaster/: dbt_project.yml
dbt_project_datamaster/: .user.yml  dbt_project.yml  profiles.yml
