[project]
name = "delta-health-medallion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.6",
    "dbt-core>=1.11.2",
    "dbt-spark[session]>=1.10.0",
    "delta-spark>=3.3.2",
    "fastapi>=0.117.1",
    "pyspark>=3.5.8",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
