[project]
name = "delta-health-medallion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "requests==2.32.3",
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
    "dbt-core==1.8.0",
    "dbt-spark==1.8.0",
]
